# ducktape-ui-lang

./: .gitattributes  COVERAGE.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  SPEC.md
.cargo/: config.toml
crates/cargo-ice/: Cargo.toml
crates/cargo-ice/src/: compat.rs  lsp.rs  main.rs  schema.rs
crates/ui-lang/: Cargo.toml
crates/ui-lang-core/: Cargo.toml
crates/ui-lang-core/src/: ast.rs  check.rs  codegen.rs  format.rs  lib.rs  parser.rs  source.rs  test_support.rs
crates/ui-lang-runtime/: Cargo.toml
crates/ui-lang-runtime/src/: flex.rs  lib.rs  resize_handle.rs  zstack.rs
examples/: main.rs  tasks.rsx
examples/apple-music/: Cargo.toml
examples/apple-music/src/: liquid_glass.rs  liquid_glass.wgsl  main.rs  mock_api.rs
examples/apple-music/src/ui/: music.ice
examples/iced-app/: Cargo.toml
examples/iced-app/assets/: app.rgba  checker.ppm
examples/iced-app/src/: alignment.rs  background_gradient.rs  border_radius.rs  color.rs  content_fit.rs  event_status.rs  font_values.rs  length.rs  main.rs  mouse_interaction.rs  redraw_request.rs  resizable_panes.rs  rotation.rs  scroll_delta.rs  shadow.rs  tests.rs  text_values.rs  theme_mode.rs  window_id.rs  window_position.rs  window_screenshot.rs  window_values.rs
examples/iced-app/src/backend/: mod.rs  shader.rs  tasks.rs
examples/iced-app/src/backend/fixtures/: editor.rs  effects.rs  mod.rs  styles.rs  values.rs
examples/iced-app/src/tests/: accessibility.rs  application.rs  events.rs  showcase.rs  tasks.rs  values.rs  widgets.rs
examples/iced-app/src/ui/: accessibility.ice  alignment.ice  alternate_theme.ice  animation.ice  backend.ice  background_gradient.ice  border_radius.ice  canvas_events.ice  color.ice  component_output.ice  component_state.ice  content_fit.ice  daemon.ice  debug_timing.ice  dynamic_widget_operations.ice  event_status.ice  font_events.ice  font_values.ice  generic_events.ice  geometry_values.ice  image_allocation.ice  input_method_events.ice  keyboard_values.ice  length.ice  mouse_events.ice  mouse_interaction.ice  native_overlay.ice  padding_angles.ice  pointer_values.ice  redraw_request.ice  resizable_panes.ice  rotation.ice  scoped_widget_operations.ice  scroll_delta.ice  shadow.ice  showcase.ice  state.ice  task_cancel.ice  task_flow.ice  task_groups.ice  (+17 more)
examples/iced-app/src/ui/components/: dialog.ice  panel.ice  task_row.ice
examples/iced-app/src/ui/handlers/: tasks.ice
scripts/: a11y-smoke.sh  a11y-windows-check.sh
(+119 files in other folders)
