[package]
name = "ui-lang-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
accesskit = "=0.24.1"
iced = { version = "=0.14.0", default-features = false, features = ["advanced", "thread-pool", "x11"] }

[target.'cfg(target_os = "linux")'.dependencies]
accesskit_unix = "=0.22.1"

[target.'cfg(target_os = "windows")'.dependencies]
accesskit_windows = "=0.32.0"

[dev-dependencies]
iced_test = "=0.14.0"

[lints]
workspace = true
