[package]
name = "iced-app"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
iced = { version = "0.14.0", default-features = false, features = ["advanced", "canvas", "highlighter", "image-without-codecs", "lazy", "markdown", "qr_code", "selector", "sipper", "svg", "sysinfo", "tiny-skia", "tokio", "wgpu", "x11"] }
image = { version = "0.25.10", default-features = false, features = ["pnm"] }
ui-lang = { path = "../../crates/ui-lang" }

[lints]
workspace = true
